fix: moving all routes to /v1
