# libs/utils/routes.ts
@@ -38,7 +38,7 @@ export const routes: Record<string, RouteConfig> = {
     ],
     authorizationScopes: ['udp/write'],
     method: 'POST',
-    path: '/user',
+    path: 'v1/user',
     summary: 'Create User Record',
     description: 'Create User Record',
     tags: ['user'],
@@ -71,7 +71,7 @@ export const routes: Record<string, RouteConfig> = {
     ],
     authorizationScopes: ['udp/write'],
     method: 'POST',
-    path: '/identity/{serviceName}/{identifier}',
+    path: 'v1/identity/{serviceName}/{identifier}',
     summary: 'Create Identity Record',
     description: 'Create Identity Record',
     tags: ['identity'],
@@ -95,7 +95,7 @@ export const routes: Record<string, RouteConfig> = {
     ],
     authorizationScopes: ['udp/read'],
     method: 'GET',
-    path: '/identity/{serviceName}/{identifier}',
+    path: 'v1/identity/{serviceName}/{identifier}',
     summary: 'Read Identity Record',
     description: 'Read Identity Record',
     tags: ['identity'],
@@ -119,7 +119,7 @@ export const routes: Record<string, RouteConfig> = {
     ],
     authorizationScopes: ['udp/delete'],
     method: 'DELETE',
-    path: '/identity/{serviceName}/{identifier}',
+    path: 'v1/identity/{serviceName}/{identifier}',
     summary: 'Delete Identity Record',
     description: 'Delete Identity Record',
     tags: ['identity'],
